# template_literature_meta_analysis

./: .codegraph  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  README.md  STANDALONE.md  TODO.md  _combined_manuscript.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  index.html  manuscript__02_methods_overview.html  manuscript__02b_methods_extraction.html  manuscript__02d_methods_knowledge_graph.html  manuscript__02e_methods_viz_injection.html  manuscript__03_results_hypothesis.html  manuscript__03a_results_field_overview.html  manuscript__03b_results_subfields.html  manuscript__03c_results_text_analytics.html  manuscript__03d_results_citation_network.html  manuscript__04_conclusion.html  manuscript__04a_discussion.html  manuscript__05_appendix_tooling.html  manuscript__98_symbols_glossary.html  pyproject.toml
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml  subfield_defaults_modafinil.yaml
data/fixtures/: AGENTS.md  README.md  modafinil_corpus.jsonl
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  forking_guide.md  output_conventions.md  output_inventory.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  02_methods_overview.md  02a_methods_retrieval.md  02b_methods_extraction.md  02c_methods_bibliometrics.md  02d_methods_knowledge_graph.md  02e_methods_viz_injection.md  03_results_hypothesis.md  03a_results_field_overview.md  03b_results_subfields.md  03c_results_text_analytics.md  03d_results_citation_network.md  03e_results_reproducibility.md  04_discussion.md  05_appendix_tooling.md  05_conclusion.md  06_appendix_tooling.md  07_appendix_accessibility.md  07_appendix_technical.md  98_symbols_glossary.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  layer_contract.yaml  preamble.md
output/data/: topics.json  (+23 more)
scripts/: 01_literature_search.py  02_meta_analysis_pipeline.py  03_build_knowledge_graph.py  04_generate_figures.py  05_inject_variables.py  06_fulltext_assessment.py  07_literature_evaluation.py  08_deep_research_dispatch.py  09_export_bibliography.py  10_reproducibility_assessment.py  11_fulltext_download.py  AGENTS.md  CONVENTIONS.md  README.md  _bootstrap.py  _io.py  generate_fixture_corpus.py
src/: AGENTS.md  README.md  SKILL.md  __init__.py  config.py  config_loader.py  config_validation.py
tests/: AGENTS.md  PATTERNS.md  README.md  conftest.py  test_canonical_test_command.py  test_config_contract.py  test_config_loader.py  test_config_validation.py  test_deep_research_adapter.py  test_scripts.py  test_variables.py
(+375 files in other folders)
